--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .idea/
 .vscode/
 .swp
+.VSCodeCounter
 
 # macos file system
 .DS_Store
@@ -9,8 +10,6 @@
 # Test directory
 /tst
 /temp
-
-.VSCodeCounter
 
 # Golang
 .gopath/
@@ -20,3 +19,6 @@ config.yaml
 
 # Logfile
 logs/
+
+# Makefile temporary builds
+build/
